@@ -9,15 +9,3 @@ dependencies {
 
     compileOnly project(':resilient:resilient-kora')
 }
-
-compileJava {
-    options.compilerArgs = [
-        '--add-reads', 'kora.micrometer.module=ALL-UNNAMED', // opentelemetry micrometer meter provider
-    ]
-}
-
-javadoc {
-    options {
-        optionFiles file('javadoc.options')
-    }
-}
